--- a/index.css
+++ b/index.css
@@ -47,3 +47,19 @@ body{
 #title{
     color: gray;
 }
+
+#mode-btn{
+    display: block;
+    border: 1px solid black;
+    background-color: darkslategray;
+    color: lightblue;
+    padding: 5px 10px;
+    font-weight: bold;
+    margin: 10px;
+    border-radius: 20px;
+}
+
+#mode-btn:hover{
+    background-color: lightblue;    
+    color: darkslategray;
+}
